RHS section tables added to steel basics

--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -48,6 +48,70 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
+    "|---------|------|--------|-------|-------|-------|------|\n",
+    "| 40x40   | 3.0    | 3.41    | 4.34     | 9.78     | 4.89      | 15.0      |\n",
+    "|         | 3.2    | 3.61    | 4.60     | 10.2     | 5.11      | 14.9      |\n",
+    "|         | 4.0    | 4.39    | 5.59     | 11.8     | 5.91      | 14.5      |\n",
+    "|         | 5.0    | 5.28    | 6.73     | 13.4     | 6.68      | 14.1      |\n",
+    "| 50x50   | 3.0    | 4.35    | 5.54     | 20.2     | 8.08      | 19.1      |\n",
+    "|         | 3.2    | 4.62    | 5.88     | 21.2     | 8.49      | 19.0      |\n",
+    "|         | 4.0    | 5.64    | 7.19     | 25.0     | 9.99      | 18.6      |\n",
+    "|         | 5.0    | 6.85    | 8.73     | 28.9     | 11.6      | 18.2      |\n",
+    "|         | 6.3    | 8.31    | 10.6     | 32.8     | 13.1      | 17.6      |\n",
+    "| 60x60   | 3.0    | 5.29    | 6.74     | 36.2     | 12.1      | 23.2      |\n",
+    "|         | 3.2    | 5.62    | 7.16     | 38.2     | 12.7      | 23.1      |\n",
+    "|         | 4.0    | 6.90    | 8.79     | 45.4     | 15.1      | 22.7      |\n",
+    "|         | 5.0    | 8.42    | 10.7     | 53.3     | 17.8      | 22.3      |\n",
+    "|         | 6.3    | 10.3    | 13.1     | 61.6     | 20.5      | 21.7      |\n",
+    "|         | 8.0    | 12.5    | 16.0     | 69.7     | 23.2      | 20.9      |\n",
+    "| 70x70   | 3.6    | 7.40    | 9.42     | 68.6     | 19.6      | 27.0      |\n",
+    "|         | 5.0    | 9.99    | 12.7     | 88.5     | 25.3      | 26.4      |\n",
+    "|         | 6.3    | 12.3    | 15.6     | 104      | 29.7      | 25.8      |\n",
+    "|         | 8.0    | 15.0    | 19.2     | 120      | 34.2      | 25.0      |\n",
+    "| 80x80   | 3.6    | 8.53    | 10.9     | 105      | 26.2      | 31.1      |\n",
+    "|         | 4.0    | 9.41    | 12.0     | 114      | 28.6      | 30.9      |\n",
+    "|         | 5.0    | 11.6    | 14.7     | 137      | 34.2      | 30.5      |\n",
+    "|         | 6.3    | 14.2    | 18.1     | 162      | 40.5      | 29.9      |\n",
+    "|         | 8.0    | 17.5    | 22.4     | 189      | 47.3      | 29.1      |\n",
+    "| 90x90   | 3.6    | 9.66    | 12.3     | 152      | 33.8      | 35.2      |\n",
+    "|         | 4.0    | 10.7    | 13.6     | 166      | 37.0      | 35.0      |\n",
+    "|         | 5.0    | 13.1    | 16.7     | 200      | 44.4      | 34.5      |\n",
+    "|         | 6.3    | 16.2    | 20.7     | 238      | 53.0      | 34.0      |\n",
+    "|         | 8.0    | 20.1    | 25.6     | 281      | 62.6      | 33.2      |\n",
+    "| 100x100 | 4.0    | 11.9    | 15.2     | 232      | 46.4      | 39.1      |\n",
+    "|         | 5.0    | 14.7    | 18.7     | 279      | 55.9      | 38.6      |\n",
+    "|         | 6.3    | 18.2    | 23.2     | 336      | 67.1      | 38.0      |\n",
+    "|         | 8.0    | 22.6    | 28.8     | 400      | 79.9      | 37.3      |\n",
+    "|         | 10.0   | 27.4    | 34.9     | 462      | 92.4      | 36.4      |\n",
+    "| 120x120  | 5.0    | 17.8    | 22.7     | 498      | 83.0      | 46.8      |\n",
+    "|          | 6.3    | 22.2    | 28.2     | 603      | 100       | 46.2      |\n",
+    "|          | 8.0    | 27.6    | 35.2     | 726      | 121       | 45.5      |\n",
+    "|          | 10.0   | 33.7    | 42.9     | 852      | 142       | 44.6      |\n",
+    "|          | 12.5   | 40.9    | 52.1     | 982      | 164       | 43.4      |\n",
+    "| 140x140  | 5.0    | 21.0    | 26.7     | 807      | 115       | 55.0      |\n",
+    "|          | 6.3    | 26.1    | 33.3     | 984      | 141       | 54.4      |\n",
+    "|          | 8.0    | 32.6    | 41.6     | 1200     | 171       | 53.6      |\n",
+    "|          | 10.0   | 40.0    | 50.9     | 1420     | 202       | 52.7      |\n",
+    "|          | 12.5   | 48.7    | 62.1     | 1650     | 236       | 51.6      |\n",
+    "| 150x150  | 5.0    | 22.6    | 28.7     | 1000     | 134       | 59.0      |\n",
+    "|          | 6.3    | 28.1    | 35.8     | 1220     | 163       | 58.5      |\n",
+    "|          | 8.0    | 35.1    | 44.8     | 1490     | 199       | 57.7      |\n",
+    "|          | 10.0   | 43.1    | 54.9     | 1770     | 236       | 56.8      |\n",
+    "|          | 12.5   | 52.7    | 67.1     | 2080     | 277       | 55.7      |\n",
+    "|          | 16.0   | 65.2    | 83.0     | 2430     | 324       | 54.1      |\n",
+    "| 160x160  | 5.0    | 24.1    | 30.7     | 1230     | 153       | 63.1      |\n",
+    "|          | 6.3    | 30.1    | 38.3     | 1500     | 187       | 62.6      |\n",
+    "|          | 8.0    | 37.6    | 48.0     | 1830     | 229       | 61.8      |\n",
+    "|          | 10.0   | 46.3    | 58.9     | 2190     | 273       | 60.9      |\n",
+    "|          | 12.5   | 56.6    | 72.1     | 2580     | 322       | 59.8      |\n",
+    "| 180x180  | 6.3    | 34.0    | 43.3     | 2170     | 241       | 70.7      |\n",
+    "|          | 8.0    | 42.7    | 54.4     | 2660     | 296       | 70.0      |\n",
+    "|          | 10.0   | 52.5    | 66.9     | 3190     | 355       | 69.1      |\n",
+    "|          | 12.5   | 64.4    | 82.1     | 3790     | 421       | 68.0      |\n",
+    "|          | 16.0   | 80.2    | 102      | 4500     | 500       | 66.4      |\n",
+    "\n",
+    "\n",
     "## RHS hollow sections 200 x 200 - 400 x 400 (continued)\n",
     "```{figure} Images/RHS.png\n",
     "---\n",
@@ -55,7 +119,7 @@
     "RHS axes\n",
     "```\n",
     "\n",
-    "| $h$ x $b$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
+    "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
     "|---------|------|--------|-------|-------|-------|------|\n",
     "| 200x200 | 5.0  | 30.4   | 38.7  | 2450  | 245   | 79.5 |\n",
     "|         | 6.3  | 38.0   | 48.4  | 3010  | 301   | 78.9 |\n",
@@ -90,6 +154,31 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
+    "|-------|--------|--------|-------|---------|---------|----------|----------|-----------|-----------|\n",
+    "| 50x30 | 3.2    | 3.61   | 4.13  | 14.2    | 6.20    | 5.68     | 4.13     | 17.6      | 11.6      |\n",
+    "| 60x40 | 3.0    | 4.35   | 6.95  | 26.5    | 13.9    | 8.82     | 6.95     | 21.8      | 15.8      |\n",
+    "|       | 4.0    | 5.64   | 8.52  | 32.8    | 17.0    | 10.9     | 8.52     | 21.4      | 15.4      |\n",
+    "|       | 5.0    | 6.85   | 9.77  | 38.1    | 19.5    | 12.7     | 9.77     | 20.9      | 15.0      |\n",
+    "| 80x40 | 3.2    | 5.62   | 9.46  | 57.2    | 18.9    | 14.3     | 9.46     | 28.3      | 16.3      |\n",
+    "|       | 4.0    | 6.90   | 11.1  | 68.2    | 22.2    | 17.1     | 11.1     | 27.9      | 15.9      |\n",
+    "|       | 5.0    | 8.42   | 12.9  | 80.3    | 25.7    | 20.1     | 12.9     | 27.4      | 15.5      |\n",
+    "|       | 6.3    | 10.3   | 14.6  | 93.3    | 29.2    | 23.3     | 14.6     | 26.7      | 14.9      |\n",
+    "|       | 8.0    | 12.5   | 16.1  | 106     | 32.1    | 26.5     | 16.1     | 25.8      | 14.2      |\n",
+    "| 90x50 | 3.6    | 7.40   | 15.5  | 98.3    | 38.7    | 21.8     | 15.5     | 32.3      | 20.3      |\n",
+    "|       | 5.0    | 9.99   | 19.7  | 127     | 49.2    | 28.3     | 19.7     | 31.6      | 19.7      |\n",
+    "|       | 6.3    | 12.3   | 22.8  | 150     | 57.0    | 33.3     | 22.8     | 31.0      | 19.1      |\n",
+    "| 100x50| 3.0    | 6.71   | 14.7  | 110     | 36.8    | 21.9     | 14.7     | 35.8      | 20.8      |\n",
+    "|       | 3.2    | 7.13   | 15.5  | 116     | 38.8    | 23.2     | 15.5     | 35.7      | 20.7      |\n",
+    "|       | 5.0    | 10.8   | 21.7  | 167     | 54.3    | 33.3     | 21.7     | 34.8      | 19.9      |\n",
+    "|       | 6.3    | 13.3   | 25.2  | 197     | 63.0    | 39.4     | 25.2     | 34.2      | 19.3      |\n",
+    "|       | 8.0    | 16.3   | 31.4  | 230     | 71.7    | 46.0     | 28.7     | 33.3      | 18.6      |\n",
+    "|       | 10.0   | 19.6   | 37.8  | 259     | 78.4    | 51.8     | 31.4     | 32.2      | 17.7      |\n",
+    "| 100x60| 3.6    | 8.53   | 21.6  | 145     | 64.8    | 28.9     | 21.6     | 36.5      | 24.4      |\n",
+    "|       | 5.0    | 11.6   | 27.9  | 189     | 83.6    | 37.8     | 27.9     | 35.8      | 23.8      |\n",
+    "|       | 6.3    | 14.2   | 32.7  | 225     | 98.1    | 45.0     | 32.7     | 35.2      | 23.3      |\n",
+    "|       | 8.0    | 17.5   | 37.8  | 264     | 113     | 52.8     | 37.8     | 34.4      | 22.5      |\n",
+    "\n",
     "## RHS hollow sections 120 x 60 tot 500 x 300 (continued)\n",
     "\n",
     "\n",
@@ -98,6 +187,68 @@
     "---\n",
     "RHS axes\n",
     "```\n",
+    "\n",
+    "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
+    "|---------|--------|--------|-------|---------|---------|----------|----------|-----------|-----------|\n",
+    "| 120x60  | 3.6    | 9.70   | 12.3  | 227     | 76.3    | 37.9     | 25.4     | 43.0      | 24.9      |\n",
+    "|         | 5.0    | 13.1   | 16.7  | 299     | 98.8    | 49.9     | 32.9     | 42.3      | 24.3      |\n",
+    "|         | 6.3    | 16.2   | 20.7  | 358     | 116     | 59.7     | 38.8     | 41.6      | 23.7      |\n",
+    "|         | 8.0    | 20.1   | 25.6  | 425     | 135     | 70.8     | 45.0     | 40.8      | 23.0      |\n",
+    "| 120x80  | 5.0    | 14.7   | 18.7  | 365     | 193     | 60.9     | 48.2     | 44.2      | 32.1      |\n",
+    "|         | 6.3    | 18.2   | 23.2  | 440     | 230     | 73.3     | 57.6     | 43.6      | 31.5      |\n",
+    "|         | 8.0    | 22.6   | 28.8  | 525     | 273     | 87.5     | 68.1     | 42.7      | 30.8      |\n",
+    "|         | 10.0   | 27.4   | 34.9  | 609     | 313     | 102      | 78.1     | 41.8      | 29.9      |\n",
+    "| 150x100 | 5.0    | 18.6   | 23.7  | 739     | 392     | 98.5     | 78.5     | 55.8      | 40.7      |\n",
+    "|         | 6.3    | 23.1   | 29.5  | 898     | 474     | 120      | 94.8     | 55.2      | 40.1      |\n",
+    "|         | 8.0    | 28.9   | 36.8  | 1090    | 569     | 145      | 114      | 54.4      | 39.4      |\n",
+    "|         | 10.0   | 35.3   | 44.9  | 1280    | 665     | 171      | 133      | 53.4      | 38.5      |\n",
+    "|         | 12.5   | 42.8   | 54.6  | 1490    | 763     | 198      | 153      | 52.2      | 37.4      |\n",
+    "| 160x80  | 4.0    | 14.4   | 18.4  | 612     | 207     | 76.5     | 51.7     | 57.7      | 33.5      |\n",
+    "|         | 5.0    | 17.8   | 22.7  | 744     | 249     | 93.0     | 62.3     | 57.2      | 33.1      |\n",
+    "|         | 6.3    | 22.2   | 28.2  | 903     | 299     | 113      | 74.8     | 56.6      | 32.6      |\n",
+    "|         | 8.0    | 27.6   | 35.2  | 1090    | 356     | 136      | 89.0     | 55.7      | 31.8      |\n",
+    "|         | 10.0   | 33.7   | 42.9  | 1280    | 411     | 161      | 103      | 54.7      | 31.0      |\n",
+    "| 200x100 | 5.0    | 22.6   | 28.7  | 1500    | 505     | 149      | 101      | 72.1       | 41.9       |\n",
+    "|         | 6.3    | 28.1   | 35.8  | 1830    | 613     | 183      | 123      | 71.5       | 41.4       |\n",
+    "|         | 8.0    | 35.1   | 44.8  | 2230    | 739     | 223      | 148      | 70.6       | 40.6       |\n",
+    "|         | 10.0   | 43.1   | 54.9  | 2660    | 869     | 266      | 174      | 69.6       | 39.8       |\n",
+    "|         | 12.5   | 52.7   | 67.1  | 3140    | 1000    | 314      | 201      | 68.4       | 38.7       |\n",
+    "| 200x120 | 5.0    | 24.1   | 30.7  | 1690    | 762     | 168      | 127      | 74.0       | 49.8       |\n",
+    "|         | 6.3    | 30.1   | 38.3  | 2070    | 929     | 207      | 155      | 73.4       | 49.2       |\n",
+    "|         | 8.0    | 37.6   | 48.0  | 2530    | 1130    | 253      | 188      | 72.6       | 48.5       |\n",
+    "|         | 10.0   | 46.3   | 58.9  | 3030    | 1340    | 303      | 223      | 71.7       | 47.6       |\n",
+    "| 200x150 | 8.0    | 41.4   | 52.8  | 2970    | 1890    | 297      | 253      | 75.0       | 59.9       |\n",
+    "|         | 10.0   | 51.0   | 64.9  | 3570    | 2260    | 357      | 302      | 74.1       | 59.1       |\n",
+    "| 250x100 | 10.0   | 51.0   | 64.9  | 4730    | 1070    | 379      | 214      | 85.4       | 40.6       |\n",
+    "|         | 12.5   | 62.5   | 79.6  | 5620    | 1250    | 450      | 249      | 84.1       | 39.6       |\n",
+    "| 250x150 | 5.0    | 30.4   | 38.7  | 3360    | 1530    | 269      | 204      | 93.1       | 62.8       |\n",
+    "|         | 6.3    | 38.0   | 48.4  | 4140    | 1870    | 331      | 250      | 92.5       | 62.2       |\n",
+    "|         | 8.0    | 47.7   | 60.8  | 5110    | 2300    | 409      | 306      | 91.7       | 61.5       |\n",
+    "|         | 10.0   | 58.8   | 74.9  | 6170    | 2760    | 494      | 367      | 90.8       | 60.6       |\n",
+    "|         | 12.5   | 72.3   | 92.1  | 7390    | 3270    | 591      | 435      | 89.6       | 59.6       |\n",
+    "|         | 16.0   | 90.3   | 115   | 8880    | 3870    | 710      | 516      | 87.9       | 58.0       |\n",
+    "| 300x100 | 8.0    | 47.7   | 60.8  | 6310    | 1080    | 420      | 216      | 102.0       | 42.1        |\n",
+    "|         | 10.0   | 58.8   | 74.9  | 7610    | 1280    | 508      | 255      | 101.0       | 41.3        |\n",
+    "| 300x200 | 6.3    | 47.9   | 61.0  | 7830    | 4190    | 522      | 419      | 113.0       | 82.9        |\n",
+    "|         | 8.0    | 60.3   | 76.8  | 9720    | 5180    | 648      | 518      | 113.0       | 82.2        |\n",
+    "|         | 10.0   | 74.5   | 94.9  | 11800   | 6280    | 788      | 628      | 112.0       | 81.3        |\n",
+    "|         | 12.5   | 91.9   | 117   | 14300   | 7540    | 952      | 754      | 110.0       | 80.2        |\n",
+    "|         | 16.0   | 115    | 147   | 17400   | 9110    | 1160     | 911      | 109.0       | 78.7        |\n",
+    "| 400x200 | 8.0    | 72.8   | 92.8  | 19600   | 6660    | 978      | 666      | 145.0       | 84.7        |\n",
+    "|         | 10.0   | 90.2   | 115   | 23900   | 8080    | 1200     | 808      | 144.0       | 83.9        |\n",
+    "|         | 12.5   | 112    | 142   | 29100   | 9740    | 1450     | 974      | 143.0       | 82.8        |\n",
+    "|         | 16.0   | 141    | 179   | 35700   | 11800   | 1790     | 1180     | 141.0       | 81.3        |\n",
+    "| 450x250 | 8.0    | 85.4   | 109   | 30100   | 12100   | 1340     | 971      | 166.0       | 106.0       |\n",
+    "|         | 10.0   | 106    | 135   | 36900   | 14800   | 1640     | 1190     | 165.0       | 105.0       |\n",
+    "|         | 12.5   | 131    | 167   | 45000   | 18000   | 2000     | 1440     | 164.0       | 104.0       |\n",
+    "|         | 16.0   | 166    | 211   | 55700   | 22000   | 2480     | 1760     | 162.0       | 102.0       |\n",
+    "| 500x300 | 8.0    | 98.0   | 125  | 43700   | 20000   | 1750     | 1330      | 187.0       | 126.0       |\n",
+    "|         | 10.0   | 122    | 155  | 53800   | 24400   | 2150     | 1630     | 186.0       | 126.0       |\n",
+    "|         | 12.5   | 151    | 192  | 65800   | 29800   | 2630     | 1990     | 185.0       | 125.0       |\n",
+    "|         | 16.0   | 191    | 243  | 81800   | 36800   | 3270     | 2450      | 183.0       | 123.0       |\n",
+    "|         | 20.0   | 235    | 300  | 98800   | 44100   | 3950     | 2940       | 182.0       | 121.0       |\n",
+    "\n",
+    "\n",
     "\n",
     "## UNP sections\n",
     "```{figure} Images/UNP.png\n",
