--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -41,6 +41,71 @@
     "CHS axes\n",
     "```\n",
     "\n",
+    "| $D \\ [mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
+    "|---------|------|--------|-------|-------|-------|------|\n",
+    "| 26.9          | 3.2    | 1.87    | 2.38     | 1.70     | 1.27      | 8.5       |\n",
+    "| 42.4          | 3.2    | 3.09    | 3.94     | 7.62     | 3.59      | 13.9      |\n",
+    "| 48.3          | 3.2    | 3.56    | 4.53     | 11.6     | 4.80      | 16.0      |\n",
+    "|               | 4.0    | 4.37    | 5.57     | 13.8     | 5.70      | 15.7      |\n",
+    "|               | 5.0    | 5.34    | 6.80     | 16.2     | 6.69      | 15.4      |\n",
+    "| 60.3          | 3.2    | 4.51    | 5.74     | 23.5     | 7.78      | 20.2      |\n",
+    "|               | 5.0    | 6.82    | 8.69     | 33.5     | 11.1      | 19.6      |\n",
+    "| 76.1          | 2.9    | 5.24    | 6.67     | 44.7     | 11.8      | 25.9      |\n",
+    "|               | 3.2    | 5.75    | 7.33     | 48.8     | 12.8      | 25.8      |\n",
+    "|               | 4.0    | 7.11    | 9.06     | 59.1     | 15.5      | 25.5      |\n",
+    "|               | 5.0    | 8.77    | 11.2     | 70.9     | 18.6      | 25.2      |\n",
+    "| 88.9          | 3.2    | 6.76    | 8.62     | 79.2     | 17.8      | 30.3      |\n",
+    "|               | 4.0    | 8.38    | 10.7     | 96.3     | 21.7      | 30.0      |\n",
+    "|               | 5.0    | 10.4    | 13.2     | 116      | 26.2      | 29.7      |\n",
+    "|               | 6.3    | 12.8    | 16.3     | 140      | 31.5      | 29.3      |\n",
+    "| 114.3         | 3.2    | 8.77    | 11.2     | 172      | 30.2      | 39.3      |\n",
+    "|               | 3.6    | 9.83    | 12.5     | 192      | 33.6      | 39.2      |\n",
+    "|               | 5.0    | 13.5    | 17.2     | 257      | 45.0      | 38.7      |\n",
+    "|               | 6.3    | 16.8    | 21.4     | 313      | 54.7      | 38.2      |\n",
+    "| 139.7         | 5.0    | 16.6    | 21.2     | 481      | 68.8      | 47.7      |\n",
+    "|               | 6.3    | 20.7    | 26.4     | 589      | 84.3      | 47.2      |\n",
+    "|               | 8.0    | 26.0    | 33.1     | 720      | 103       | 46.6      |\n",
+    "|               | 10.0   | 32.0    | 40.7     | 862      | 123       | 46.0      |\n",
+    "| 168.3         | 5.0    | 20.1    | 25.7     | 856      | 102       | 57.8      |\n",
+    "|               | 6.3    | 25.2    | 32.1     | 1050     | 125       | 57.3      |\n",
+    "|               | 8.0    | 31.6    | 40.3     | 1300     | 154       | 56.7      |\n",
+    "|               | 10.0   | 39.0    | 49.7     | 1560     | 186       | 56.1      |\n",
+    "| 193.7         | 5.0    | 23.3    | 29.6     | 1320     | 136       | 66.7      |\n",
+    "|               | 6.3    | 29.1    | 37.1     | 1630     | 168       | 66.3      |\n",
+    "|               | 8.0    | 36.6    | 46.7     | 2020     | 208       | 65.7      |\n",
+    "|               | 10.0   | 45.3    | 57.7     | 2440     | 252       | 65.0      |\n",
+    "| 219.1         | 5.0    | 26.4    | 33.6     | 1930     | 176       | 75.7      |\n",
+    "|               | 6.3    | 33.1    | 42.1     | 2390     | 218       | 75.3      |\n",
+    "|               | 8.0    | 41.6    | 53.1     | 2960     | 270       | 74.7      |\n",
+    "|               | 10.0   | 51.6    | 65.7     | 3600     | 328       | 74.0      |\n",
+    "|               | 12.5   | 63.7    | 81.1     | 4350     | 397       | 73.2      |\n",
+    "| 244.5         | 12.0   | 68.8    | 87.7     | 5940     | 486       | 82.3      |\n",
+    "| 273.0         | 5.0    | 33.0    | 42.1     | 3780     | 277       | 94.8      |\n",
+    "|               | 6.3    | 41.4    | 52.8     | 4700     | 344       | 94.3      |\n",
+    "|               | 8.0    | 52.3    | 66.6     | 5850     | 429       | 93.7      |\n",
+    "|               | 10.0   | 64.9    | 82.6     | 7150     | 524       | 93.1      |\n",
+    "|               | 12.5   | 80.3    | 102      | 8700     | 637       | 92.2      |\n",
+    "|               | 16.0   | 101     | 129      | 10700    | 784       | 91.0      |\n",
+    "| 323.9         | 6.3    | 49.3    | 62.9     | 7930     | 490       | 112.0     |\n",
+    "|               | 8.0    | 62.3    | 79.4     | 9910     | 612       | 112.0     |\n",
+    "|               | 10.0   | 77.4    | 98.6     | 12200    | 751       | 111.0     |\n",
+    "|               | 12.5   | 96.0    | 122      | 14800    | 917       | 110.0     |\n",
+    "|               | 16.0   | 122     | 155      | 18400    | 1140      | 109.0     |\n",
+    "| 406.4         | 6.3    | 62.2    | 79.2     | 15900    | 780       | 141.0     |\n",
+    "|               | 8.0    | 78.6    | 100      | 19900    | 978       | 141.0     |\n",
+    "|               | 10.0   | 97.8    | 125      | 24500    | 1210      | 140.0     |\n",
+    "|               | 12.5   | 121     | 155      | 30000    | 1480      | 139.0     |\n",
+    "|               | 16.0   | 154     | 196      | 37500    | 1840      | 138.0     |\n",
+    "| 457.0         | 8.0    | 88.6    | 113      | 28500    | 1250      | 159.0     |\n",
+    "|               | 10.0   | 110     | 140      | 35100    | 1540      | 158.0     |\n",
+    "|               | 12.5   | 137     | 175      | 43100    | 1890      | 157.0     |\n",
+    "|               | 16.0   | 174     | 222      | 54000    | 2360      | 156.0     |\n",
+    "| 508.0         | 8.0    | 98.6    | 126      | 39300    | 1550      | 177.0     |\n",
+    "|               | 10.0   | 123     | 156      | 48500    | 1910      | 176.0     |\n",
+    "|               | 12.5   | 153     | 195      | 59800    | 2350      | 175.0     |\n",
+    "|               | 16.0   | 194     | 247      | 74900    | 2950      | 174.0     |\n",
+    "|               | 20.0   | 241     | 307      | 91400    | 3600      | 173.0     |\n",
+    "\n",
     "## RHS hollow sections 40 x 40 tot 180 x 180 (hot rolled, square)\n",
     "```{figure} Images/RHS.png\n",
     "---\n",
