IPE section tables basics steel added

--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -13,12 +13,92 @@
     "IPE axes\n",
     "```\n",
     "\n",
+    "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
+    "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|--------------|--------------|\n",
+    "| IPE 100A   | 6.9    | 98.0   | 55.0   | 3.60     | 4.70     | 8.78    | 141      | 13.1     | 28.8    | 4.77    | 40.1         | 12.2         |\n",
+    "| IPE 100    | 8.1    | 100.0  | 55.0   | 4.10     | 5.70     | 10.3    | 171      | 15.9     | 34.2    | 5.79    | 40.7         | 12.4         |\n",
+    "| IPE 120 A  | 8.7    | 117.6  | 64.0   | 3.80     | 5.10     | 11.0    | 257      | 22.4     | 43.8    | 7.00    | 48.3         | 14.2         |\n",
+    "| IPE 120    | 10.4   | 120.0  | 64.0   | 4.40     | 6.30     | 13.2    | 318      | 27.7     | 53.0    | 8.65    | 49.0         | 14.5         |\n",
+    "| IPE 140 A  | 10.5   | 137.4  | 73.0   | 3.80     | 5.60     | 13.4    | 435      | 36.4     | 63.3    | 9.98    | 57.0         | 16.5         |\n",
+    "| IPE 140    | 12.9   | 140.0  | 73.0   | 4.70     | 6.90     | 16.4    | 541      | 44.9     | 77.3    | 12.3    | 57.4         | 16.5         |\n",
+    "| IPE 140 R  | 14.4   | 142.0  | 72.0   | 5.30     | 7.80     | 18.4    | 611      | 48.8     | 86.1    | 13.5    | 57.7         | 16.3         |\n",
+    "| IPE 160 A  | 12.7   | 157.0  | 82.0   | 4.00     | 5.90     | 16.2    | 689      | 54.4     | 87.8    | 13.3    | 65.3         | 18.3         |\n",
+    "| IPE 160    | 15.8   | 160.0  | 82.0   | 5.00     | 7.40     | 20.1    | 869      | 68.3     | 109     | 16.7    | 65.8         | 18.4         |\n",
+    "| IPE 160 R  | 17.7   | 162.0  | 81.0   | 5.60     | 8.50     | 22.6    | 989      | 75.7     | 122     | 18.7    | 66.2         | 18.3         |\n",
+    "| IPE 180 A  | 15.4   | 177.0  | 91.0   | 4.30     | 6.50     | 19.6    | 1063     | 81.9     | 120     | 18.0    | 73.7         | 20.5         |\n",
+    "| IPE 180    | 18.8   | 180.0  | 91.0   | 5.30     | 8.00     | 23.9    | 1317     | 101      | 146     | 22.2    | 74.2         | 20.5         |\n",
+    "| IPE 180 O  | 21.3   | 182.0  | 92.0   | 6.00     | 9.00     | 27.1    | 1505     | 117      | 165     | 25.5    | 74.5                 | 20.8                 |\n",
+    "| IPE 180 R  | 22.1   | 183.0  | 89.0   | 6.40     | 9.50     | 28.1    | 1554     | 112      | 170     | 25.2    | 74.4                 | 20.0                 |\n",
+    "| IPE 200 A  | 18.4   | 197.0  | 100.0  | 4.50     | 7.00     | 23.5    | 1591     | 117      | 162     | 23.4    | 82.3                 | 22.3                 |\n",
+    "| IPE 200    | 22.4   | 200.0  | 100.0  | 5.60     | 8.50     | 28.5    | 1943     | 142      | 194     | 28.5    | 82.6                 | 22.4                 |\n",
+    "| IPE 200 O  | 25.1   | 202.0  | 102.0  | 6.20     | 9.50     | 32.0    | 2211     | 169      | 219     | 33.1    | 83.2                 | 23.0                 |\n",
+    "| IPE 200 R  | 26.6   | 204.0  | 98.0   | 6.60     | 10.5     | 33.9    | 2363     | 166      | 232     | 33.8    | 83.5                 | 22.1                 |\n",
+    "| IPE 220 A  | 22.2   | 217.0  | 110.0  | 5.00     | 7.70     | 28.3    | 2317     | 171      | 214     | 31.2    | 90.5                 | 24.6                 |\n",
+    "| IPE 220    | 26.2   | 220.0  | 110.0  | 5.90     | 9.20     | 33.4    | 2772     | 205      | 252     | 37.3    | 91.1                 | 24.8                 |\n",
+    "| IPE 220 O  | 29.4   | 222.0  | 112.0  | 6.60     | 10.2     | 37.4    | 3134     | 240      | 282     | 42.8    | 91.6                 | 25.3                 |\n",
+    "| IPE 220 R  | 31.6   | 225.0  | 108.0  | 6.70     | 11.8     | 40.2    | 3474     | 249      | 309     | 46.1    | 92.9                 | 24.9                 |\n",
+    "| IPE 240 A  | 26.2   | 237.0  | 120.0  | 5.20     | 8.30     | 33.3    | 3290     | 240      | 278     | 40.0    | 74.5      | 99.4      |\n",
+    "| IPE 240    | 30.7   | 240.0  | 120.0  | 6.20     | 9.80     | 39.1    | 3892     | 284      | 324     | 47.3    | 74.4      | 99.7      |\n",
+    "| IPE 240 O  | 34.3   | 242.0  | 122.0  | 7.00     | 10.8     | 43.7    | 4369     | 329      | 361     | 53.9    | 82.3      | 100.0     |\n",
+    "| IPE 240 R  | 37.3   | 245.0  | 118.0  | 7.50     | 12.3     | 47.5    | 4823     | 339      | 394     | 57.4    | 82.6      | 101.0     |\n",
+    "| IPE 270 A  | 30.7   | 267.0  | 135.0  | 5.50     | 8.70     | 39.1    | 4917     | 358      | 368     | 53.0    | 83.2      | 112.0     |\n",
+    "| IPE 270    | 36.1   | 270.0  | 135.0  | 6.60     | 10.2     | 45.9    | 5790     | 420      | 429     | 62.2    | 83.5      | 112.0     |\n",
+    "| IPE 270 O  | 42.3   | 274.0  | 136.0  | 7.50     | 12.2     | 53.8    | 6947     | 513      | 507     | 75.5    | 90.5      | 114.0     |\n",
+    "| IPE 270 R  | 44.0   | 276.0  | 133.0  | 7.70     | 13.1     | 56.0    | 7312     | 516      | 530     | 77.6    | 91.1      | 114.0     |\n",
+    "| IPE 300 A  | 36.5   | 297.0  | 150.0  | 6.10     | 9.20     | 46.5    | 7173     | 519      | 483     | 69.2    | 91.6      | 124.0     |\n",
+    "| IPE 300    | 42.2   | 300.0  | 150.0  | 7.10     | 10.7     | 53.8    | 8356     | 604      | 557     | 80.5    | 92.9      | 125.0     |\n",
+    "| IPE 300O   | 49.3   | 304.0  | 152.0  | 8.00     | 12.7     | 62.8    | 9994     | 746      | 658     | 98.1    |           | 126.0     |\n",
+    "| IPE 300 R  | 51.7   | 306.0  | 147.0  | 8.50     | 13.7     | 65.9    | 10500    | 728      | 686     | 99.0    |           | 126.0     |\n",
+    "\n",
     "## IPE sections (IPE 330 - IPE 750)\n",
     "```{figure} Images/IPE.png\n",
     "---\n",
     "---\n",
     "IPE axes\n",
     "```\n",
+    "\n",
+    "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
+    "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
+    "| IPE 330 A  | 43.0   | 327.0  | 160.0  | 6.50     | 10.0     | 54.7    | 10230    | 685      | 626     | 85.6    |137.0| 35.4|\n",
+    "| IPE 330    | 49.1   | 330.0  | 160.0  | 7.50     | 11.5     | 62.6    | 11770    | 788      | 713     | 98.5    |137.0| 35.5|\n",
+    "| IPE 330 O  | 57.0   | 334.0  | 162.0  | 8.50     | 13.5     | 72.6    | 13910    | 960      | 833     | 119     |138.0| 36.4|\n",
+    "| IPE 330 R  | 60.3   | 336.0  | 158.0  | 9.20     | 14.5     | 76.8    | 14690    | 958      | 874     | 121     |138.0| 35.3|\n",
+    "| IPE 360 A  | 50.2   | 357.6  | 170.0  | 6.60     | 11.5     | 64.0    | 14520    | 944      | 812     | 111     |151.0| 38.4|\n",
+    "| IPE 360    | 57.1   | 360.0  | 170.0  | 8.00     | 12.7     | 72.7    | 16270    | 1043     | 904     | 123     |150.0| 37.9|\n",
+    "| IPE 360 O  | 66.0   | 364.0  | 172.0  | 9.20     | 14.7     | 84.1    | 19050    | 1251     | 1047    | 145     |150.0| 38.6|\n",
+    "| IPE 360 R  | 70.3   | 366.0  | 168.0  | 9.90     | 16.0     | 89.6    | 20290    | 1270     | 1109    | 151     |150.0| 37.6|\n",
+    "| IPE 400 A  | 57.4   | 397.0  | 180.0  | 7.00     | 12.0     | 73.1    | 20290    | 1171     | 1022    | 130     |167.0| 40.0|\n",
+    "| IPE 400    | 66.3   | 400.0  | 180.0  | 8.60     | 13.5     | 84.5    | 23130    | 1318     | 1156    | 146     |165.0| 39.5|\n",
+    "| IPE 400 O  | 75.7   | 404.0  | 182.0  | 9.70     | 15.5     | 96.4    | 26750    | 1564     | 1324    | 172     |167.0| 40.3|\n",
+    "| IPE 400 R  | 81.5   | 407.0  | 178.0  | 10.6     | 17.0     | 104     | 28860    | 1606     | 1418    | 180     |167.0| 39.3|\n",
+    "| IPE 400 V  | 84.0   | 408.0  | 182.0  | 10.6     | 17.5     | 107     | 30140    | 1766     | 1477    | 194     |168.0| 40.6|\n",
+    "| IPE 450 A | 67.2   | 447.0  | 190.0  | 7.60     | 13.1     | 85.5    | 29760    | 1502     | 1331    | 158     |187.0| 41.9|\n",
+    "| IPE 450   | 77.6   | 450.0  | 190.0  | 9.40     | 14.6     | 98.8    | 33740    | 1676     | 1500    | 176     |185.0| 41.2|\n",
+    "| IPE 450 O | 92.4   | 456.0  | 192.0  | 11.0     | 17.6     | 118     | 40920    | 2085     | 1795    | 217     |186.0| 42.1|\n",
+    "| IPE 450 R | 95.2   | 458.0  | 188.0  | 11.3     | 18.6     | 121     | 42400    | 2070     | 1851    | 220     |187.0| 41.3|\n",
+    "| IPE 450 V | 103.6  | 460.0  | 194.0  | 12.4     | 19.6     | 132     | 46200    | 2397     | 2009    | 247     |187.0| 42.6|\n",
+    "| IPE 500 A | 79.4   | 497.0  | 200.0  | 8.40     | 14.5     | 101     | 42930    | 1939     | 1728    | 194     |206.0| 43.8|\n",
+    "| IPE 500   | 90.7   | 500.0  | 200.0  | 10.2     | 16.0     | 116     | 48200    | 2142     | 1928    | 214     |204.0| 43.1|\n",
+    "| IPE 500 O | 107.3  | 506.0  | 202.0  | 12.0     | 19.0     | 137     | 57780    | 2622     | 2284    | 260     |206.0| 43.8|\n",
+    "| IPE 500 R | 111.4  | 508.0  | 198.0  | 12.6     | 20.0     | 142     | 59930    | 2600     | 2360    | 263     |205.0| 42.8|\n",
+    "| IPE 500 V | 128.8  | 514.0  | 204.0  | 14.2     | 23.0     | 164     | 70720    | 3271     | 2752    | 321     |208.0| 44.7|\n",
+    "| IPE 550 A | 92.1   | 547.0  | 210.0  | 9.00     | 15.7     | 117     | 59980    | 2432     | 2193    | 232     |226.0| 45.5|\n",
+    "| IPE 550   | 105.5  | 550.0  | 210.0  | 11.1     | 17.2     | 134     | 67120    | 2668     | 2441    | 254     |223.0| 44.5|\n",
+    "| IPE 550 O | 122.5  | 556.0  | 212.0  | 12.7     | 20.2     | 156     | 79160    | 3224     | 2847    | 304     |225.0| 45.5|\n",
+    "| IPE 550 R  | 133.7  | 560.0  | 210.0  | 14.0     | 22.2     | 170     | 86600    | 3447     | 3093    | 328     | 225.0        | 45.0         |\n",
+    "| IPE 550 V  | 158.6  | 566.0  | 216.0  | 17.1     | 25.2     | 202     | 102300   | 4265     | 3616    | 395     | 225.0        | 46.0         |\n",
+    "| IPE 600 A  | 107.6  | 597.0  | 220.0  | 9.80     | 17.5     | 137     | 82920    | 3116     | 2778    | 283     | 246.0        | 47.7         |\n",
+    "| IPE 600    | 122.4  | 600.0  | 220.0  | 12.0     | 19.0     | 156     | 92080    | 3387     | 3069    | 308     | 243.0        | 46.6         |\n",
+    "| IPE 600 O  | 154.5  | 610.0  | 224.0  | 15.0     | 24.0     | 197     | 118300   | 4521     | 3879    | 404     | 245.0        | 47.9         |\n",
+    "| IPE 600 R  | 144.4  | 608.0  | 218.0  | 14.0     | 23.0     | 184     | 110300   | 3993     | 3629    | 366     | 245.0        | 46.6         |\n",
+    "| IPE 600 V  | 183.5  | 618.0  | 228.0  | 18.0     | 28.0     | 234     | 141600   | 5570     | 4582    | 489     | 246.0        | 48.8         |\n",
+    "| IPE 750 x 137 | 137.0 | 753.0 | 263.0 | 11.5    | 17.0     | 175     | 159900   | 5166     | 4246    | 393     | 303.0        | 54.4         |\n",
+    "| IPE 750 x 147 | 147.2 | 753.0 | 265.0 | 13.2    | 17.0     | 187     | 166100   | 5289     | 4411    | 399     | 298.0        | 53.1         |\n",
+    "| IPE 750 x 161 | 160.5 | 758.0 | 266.0 | 13.8    | 19.3     | 204     | 186100   | 6073     | 4909    | 457     | 302.0        | 54.5         |\n",
+    "| IPE 750 x 174 | 173.7 | 762.0 | 267.0 | 14.4    | 21.6     | 221     | 205800   | 6873     | 5402    | 515     | 305.0        | 55.7         |\n",
+    "| IPE 750 x 185 | 185.0 | 766.0 | 267.0 | 14.9    | 23.6     | 236     | 223000   | 7510     | 5821    | 563     | 308.0        | 56.5         |\n",
+    "\n",
+    "\n",
     "\n",
     "## HEA/HEB/HEM sections (HEA 100 - HEA 340)\n",
     "```{figure} Images/HEA_HEB_HEM.png\n",
