--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -107,12 +107,122 @@
     "HEA/HEB/HEM axes\n",
     "```\n",
     "\n",
+    "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
+    "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
+    "| HE 100 AA | 12.2   | 91.0   | 100.0  | 4.20     | 5.50     | 15.6    | 237      | 92.1     | 52.0    | 18.4    | 38.9     | 24.3     |\n",
+    "| HE 100 A  | 16.7   | 96.0   | 100.0  | 5.00     | 8.00     | 21.2    | 349      | 134      | 72.8    | 26.8    | 40.6     | 25.1     |\n",
+    "| HE 100 B  | 20.4   | 100.0  | 100.0  | 6.00     | 10.0     | 26.0    | 450      | 167      | 89.9    | 33.5    | 41.6     | 25.3     |\n",
+    "| HE 120 AA | 14.6   | 109.0  | 120.0  | 4.20     | 5.50     | 18.6    | 413      | 159      | 75.8    | 26.5    | 47.2     | 29.3     |\n",
+    "| HE 120 A  | 19.9   | 114.0  | 120.0  | 5.00     | 8.00     | 25.3    | 606      | 231      | 106     | 38.5    | 48.9     | 30.2     |\n",
+    "| HE 120 B  | 26.7   | 120.0  | 120.0  | 6.50     | 11.0     | 34.0    | 864      | 318      | 144     | 52.9    | 50.4     | 30.6     |\n",
+    "| HE 140 AA | 18.1   | 128.0  | 140.0  | 4.30     | 6.00     | 23.0    | 719      | 275      | 112     | 39.3    | 55.9     | 34.5     |\n",
+    "| HE 140 A  | 24.7   | 133.0  | 140.0  | 5.50     | 8.50     | 31.4    | 1033     | 389      | 155     | 55.6    | 57.3     | 35.2     |\n",
+    "| HE 140 B  | 33.7   | 140.0  | 140.0  | 7.00     | 12.0     | 43.0    | 1509     | 550      | 216     | 78.5    | 59.3     | 35.8     |\n",
+    "| HE 160 AA | 23.8   | 148.0  | 160.0  | 4.50     | 7.00     | 30.4    | 1283     | 479      | 173     | 59.8    | 65.0     | 39.7     |\n",
+    "| HE 160 A  | 30.4   | 152.0  | 160.0  | 6.00     | 9.00     | 38.8    | 1673     | 616      | 220     | 76.9    | 65.7     | 39.8     |\n",
+    "| HE 160 B  | 42.6   | 160.0  | 160.0  | 8.00     | 13.0     | 54.3    | 2492     | 889      | 312     | 111     | 67.8     | 40.5     |\n",
+    "| HE 160 M  | 76.2   | 180.0  | 166.0  | 14.0     | 23.0     | 97.1    | 5098     | 1759     | 566     | 212     | 72.5     | 42.6     |\n",
+    "| HE 180 AA | 28.7   | 167.0  | 180.0  | 5.00     | 7.50     | 36.5    | 1967     | 730      | 236     | 81.1    | 73.4    | 44.7    |\n",
+    "| HE 180 A  | 35.5   | 171.0  | 180.0  | 6.00     | 9.50     | 45.3    | 2510     | 925      | 294     | 103     | 74.5    | 45.2    |\n",
+    "| HE 180 B  | 51.2   | 180.0  | 180.0  | 8.50     | 14.0     | 65.3    | 3831     | 1363     | 426     | 151     | 76.6    | 45.7    |\n",
+    "| HE 180 M  | 88.9   | 200.0  | 186.0  | 14.5     | 24.0     | 113     | 7483     | 2580     | 748     | 277     | 81.3    | 47.7    |\n",
+    "| HE 200 AA | 34.6   | 186.0  | 200.0  | 5.50     | 8.00     | 44.1    | 2944     | 1068     | 317     | 107     | 81.7    | 49.2    |\n",
+    "| HE 200 A  | 42.3   | 190.0  | 200.0  | 6.50     | 10.0     | 53.8    | 3692     | 1336     | 389     | 134     | 82.8    | 49.8    |\n",
+    "| HE 200 B  | 61.3   | 200.0  | 200.0  | 9.00     | 15.0     | 78.1    | 5696     | 2003     | 570     | 200     | 85.4    | 50.7    |\n",
+    "| HE 200 M  | 103.1  | 220.0  | 206.0  | 15.0     | 25.0     | 131     | 10640    | 3651     | 967     | 354     | 90.0    | 52.7    |\n",
+    "| HE 220 AA | 40.4   | 205.0  | 220.0  | 6.00     | 8.50     | 51.5    | 4170     | 1510     | 407     | 137     | 90.0    | 54.2    |\n",
+    "| HE 220 A  | 50.5   | 210.0  | 220.0  | 7.00     | 11.0     | 64.3    | 5410     | 1955     | 515     | 178     | 91.7    | 55.1    |\n",
+    "| HE 220 B  | 71.5   | 220.0  | 220.0  | 9.50     | 16.0     | 91.0    | 8091     | 2843     | 736     | 258     | 94.3    | 55.9    |\n",
+    "| HE 220 M  | 117.3  | 240.0  | 226.0  | 15.5     | 26.0     | 149     | 14600    | 5012     | 1217    | 444     | 98.9    | 57.9    |\n",
+    "| HE 240 AA | 47.4   | 224.0  | 240.0  | 6.50     | 9.00     | 60.4    | 5835     | 2077     | 521     | 173     | 98.3    | 58.7    |\n",
+    "| HE 240 A  | 60.3   | 230.0  | 240.0  | 7.50     | 12.0     | 76.8    | 7763     | 2769     | 675     | 231     | 101.0   | 60.0    |\n",
+    "| HE 240 B  | 83.2   | 240.0  | 240.0  | 10.0     | 17.0     | 106     | 11260    | 3923     | 938     | 327     | 103.0   | 60.8    |\n",
+    "| HE 240 M  | 156.7  | 270.0  | 248.0  | 18.0     | 32.0     | 200     | 24290    | 8153     | 1799    | 657     | 110.0   | 63.9    |\n",
+    "| HE 260 AA | 54.1   | 244.0  | 260.0  | 6.50     | 9.50     | 69.0    | 7981     | 2788     | 654     | 214     | 108.0   | 63.6    |\n",
+    "| HE 260 A  | 68.2   | 250.0  | 260.0  | 7.50     | 12.5     | 86.8    | 10450    | 3668     | 836     | 282     | 110.0   | 65.0    |\n",
+    "| HE 260 B  | 93.0   | 260.0  | 260.0  | 10.0     | 17.5     | 118     | 14920    | 5135     | 1148    | 395     | 112.0   | 65.8    |\n",
+    "| HE 260 M  | 172.4  | 290.0  | 268.0  | 18.0     | 32.5     | 220     | 31310    | 10450    | 2159    | 780     | 119.0   | 69.0    |\n",
+    "| HE 280 AA | 61.2   | 264.0  | 280.0  | 7.00     | 10.0     | 78.0    | 10560    | 3664     | 800     | 262     | 116.0   | 68.5    |\n",
+    "| HE 280 A  | 76.4   | 270.0  | 280.0  | 8.00     | 13.0     | 97.3    | 13670    | 4763     | 1013    | 340     | 119.0   | 70.0    |\n",
+    "| HE 280 B  | 103.1  | 280.0  | 280.0  | 10.5     | 18.0     | 131     | 19270    | 6595     | 1376    | 471     | 121.0   | 70.9    |\n",
+    "| HE 280 M  | 188.5  | 310.0  | 288.0  | 18.5     | 33.0     | 240     | 39550    | 13160    | 2551    | 914     | 128.0   | 74.0    |\n",
+    "| HE 300 AA | 69.8   | 283.0  | 300.0  | 7.50     | 10.5     | 88.9    | 13800    | 4734     | 976     | 316     | 125.0       | 73.0        |\n",
+    "| HE 300 A  | 88.3   | 290.0  | 300.0  | 8.50     | 14.0     | 113     | 18260    | 6310     | 1260    | 421     | 127.0       | 74.9        |\n",
+    "| HE 300 B  | 117.0  | 300.0  | 300.0  | 11.0     | 19.0     | 149     | 25170    | 8563     | 1678    | 571     | 130.0       | 75.8        |\n",
+    "| HE 300 C  | 176.7  | 320.0  | 305.0  | 16.0     | 29.0     | 225     | 40950    | 13740    | 2559    | 901     | 135.0       | 78.1        |\n",
+    "| HE 300 M  | 237.9  | 340.0  | 310.0  | 21.0     | 39.0     | 303     | 59200    | 19400    | 3482    | 1252    | 140.0       | 80.0        |\n",
+    "| HE 320 AA | 74.2   | 301.0  | 300.0  | 8.00     | 11.0     | 94.6    | 16450    | 4959     | 1093    | 331     | 132.0       | 72.4        |\n",
+    "| HE 320 A  | 97.6   | 310.0  | 300.0  | 9.00     | 15.5     | 124     | 22930    | 6985     | 1479    | 466     | 136.0       | 74.9        |\n",
+    "| HE 320 B  | 126.7  | 320.0  | 300.0  | 11.5     | 20.5     | 161     | 30820    | 9239     | 1926    | 616     | 138.0       | 75.7        |\n",
+    "| HE 320 M  | 245.0  | 359.0  | 309.0  | 21.0     | 40.0     | 312     | 68130    | 19710    | 3796    | 1276    | 148.0       | 79.5        |\n",
+    "| HE 340 AA | 78.9   | 320.0  | 300.0  | 8.50     | 11.5     | 101     | 19550    | 5185     | 1222    | 346     | 139.0       | 71.8        |\n",
+    "| HE 340 A  | 104.8  | 330.0  | 300.0  | 9.50     | 16.5     | 133     | 27690    | 7436     | 1678    | 496     | 144.0       | 74.6        |\n",
+    "| HE 340 B  | 134.2  | 340.0  | 300.0  | 12.0     | 21.5     | 171     | 36660    | 9690     | 2156    | 646     | 146.0       | 75.3        |\n",
+    "| HE 340 M  | 247.9  | 377.0  | 309.0  | 21.0     | 40.0     | 316     | 76370    | 19710    | 4052    | 1276    | 156.0       | 79.0        |\n",
+    "\n",
     "## HEA/HEB/HEM sections (HEA 360 - HEA 1000)\n",
     "```{figure} Images/HEA_HEB_HEM.png\n",
     "---\n",
     "---\n",
     "HEA/HEB/HEM axes\n",
     "```\n",
+    "\n",
+    "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
+    "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
+    "| Type       | h (mm) | b (mm) | s (mm) | t_w (mm) | t_f (mm) | A (cm²) | Wx (cm³) | Wy (cm³) | ix (cm) | iy (cm) | New Column1 | New Column2 |\n",
+    "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-------------|-------------|\n",
+    "| HE 360 AA  | 83.7   | 339.0  | 300.0  | 9.00     | 12.0     | 107     | 23040    | 5410     | 1359    | 361     | 147.0       | 71.2        |\n",
+    "| HE 360 A   | 112.1  | 350.0  | 300.0  | 10.0     | 17.5     | 143     | 33090    | 7887     | 1891    | 526     | 152.0       | 74.3        |\n",
+    "| HE 360 B   | 141.8  | 360.0  | 300.0  | 12.5     | 22.5     | 181     | 43190    | 10140    | 2400    | 676     | 155.0       | 74.9        |\n",
+    "| HE 360 M   | 250.3  | 395.0  | 308.0  | 21.0     | 40.0     | 319     | 84870    | 19520    | 4297    | 1268    | 163.0       | 78.3        |\n",
+    "| HE 400 AA  | 92.4   | 378.0  | 300.0  | 9.50     | 13.0     | 118     | 31250    | 5861     | 1654    | 391     | 163.0       | 70.6        |\n",
+    "| HE 400 x107| 107.2  | 384.0  | 297.0  | 10.0     | 16.0     | 136     | 37640    | 6998     | 1960    | 471     | 166.0       | 71.6        |\n",
+    "| HE 400 A   | 124.8  | 390.0  | 300.0  | 11.0     | 19.0     | 159     | 45070    | 8564     | 2311    | 571     | 168.0       | 73.4        |\n",
+    "| HE 400 B   | 155.3  | 400.0  | 300.0  | 13.5     | 24.0     | 198     | 57680    | 10820    | 2884    | 721     | 171.0       | 74.0        |\n",
+    "| HE 400 M   | 255.7  | 432.0  | 307.0  | 21.0     | 40.0     | 326     | 104100   | 19340    | 4820    | 1260    | 179.0       | 77.0        |\n",
+    "| HE450 AA   | 99.7   | 425.0  | 300.0  | 10.0     | 13.5     | 127     | 41890    | 6088     | 1971    | 406     | 182.0       | 69.2        |\n",
+    "| HE 450 x124| 123.9  | 435.0  | 300.0  | 10.2     | 18.5     | 158     | 55860    | 8338     | 2568    | 556     | 188.0       | 72.7        |\n",
+    "| HE 450 A   | 139.8  | 440.0  | 300.0  | 11.5     | 21.0     | 178     | 63720    | 9465     | 2896    | 631     | 189.0       | 72.9        |\n",
+    "| HE 450 B   | 171.1  | 450.0  | 300.0  | 14.0     | 26.0     | 218     | 79890    | 11720    | 3551    | 781     | 191.0       | 73.3        |\n",
+    "| HE 450 M   | 263.3  |  478.0 | 307.0  | 21.0     | 40.0     | 335     | 131500    | 19340    | 5501    | 1260    | 198.0       | 75.9        |\n",
+    "| HE 500 AA   | 107.4  | 472.0  | 300.0  | 10.5     | 14.0     | 137     | 54640    | 6314     | 2315    | 421     | 200.0   | 67.9    |\n",
+    "| HE 500 A    | 155.1  | 490.0  | 300.0  | 12.0     | 23.0     | 198     | 86970    | 10370    | 3550    | 691     | 210.0   | 72.4    |\n",
+    "| HE 500 B    | 187.3  | 500.0  | 300.0  | 14.5     | 28.0     | 239     | 107200   | 12620    | 4287    | 842     | 212.0   | 72.7    |\n",
+    "| HE 500 M    | 270.3  | 524.0  | 306.0  | 21.0     | 40.0     | 344     | 161900   | 19150    | 6180    | 1252    | 217.0   | 74.6    |\n",
+    "| HE 550 AA   | 120.0  | 522.0  | 300.0  | 11.5     | 15.0     | 153     | 72870    | 6767     | 2792    | 451     | 218.0   | 66.5    |\n",
+    "| HE 550 A    | 166.2  | 540.0  | 300.0  | 12.5     | 24.0     | 212     | 111900   | 10820    | 4146    | 721     | 230.0   | 71.5    |\n",
+    "| HE 550 B    | 199.4  | 550.0  | 300.0  | 15.0     | 29.0     | 254     | 136700   | 13080    | 4971    | 872     | 232.0   | 71.7    |\n",
+    "| HE 550 M    | 278.2  | 572.0  | 306.0  | 21.0     | 40.0     | 354     | 198000   | 19160    | 6923    | 1252    | 236.0   | 73.5    |\n",
+    "| HE 600 AA   | 128.8  | 571.0  | 300.0  | 12.0     | 15.5     | 164     | 91870    | 6993     | 3218    | 466     | 237.0   | 65.3    |\n",
+    "| HE 600 x137 | 137.4  | 575.0  | 300.0  | 11.8     | 17.5     | 175     | 101500   | 7893     | 3529    | 526     | 241.0   | 67.2    |\n",
+    "| HE 600 x151 | 151.2  | 582.0  | 300.0  | 11.6     | 20.6     | 193     | 117100   | 9287     | 4024    | 619     | 247.0   | 69.4    |\n",
+    "| HE 600 x175 | 175.2  | 588.0  | 300.0  | 13.6     | 23.9     | 223     | 136400   | 10780    | 4639    | 719     | 247.0   | 69.5    |\n",
+    "| HE 600 A    | 177.8  | 590.0  | 300.0  | 13.0     | 25.0     | 226     | 141200   | 11270    | 4787    | 751     | 250.0     | 70.5      |\n",
+    "| HE 600 B    | 211.9  | 600.0  | 300.0  | 15.5     | 30.0     | 270     | 171000   | 13530    | 5701    | 902     | 252.0     | 70.8      |\n",
+    "| HE 600 M    | 285.5  | 620.0  | 305.0  | 21.0     | 40.0     | 364     | 237400   | 18980    | 7660    | 1244    | 256.0     | 72.2      |\n",
+    "| HE 650 AA   | 138.0  | 620.0  | 300.0  | 12.5     | 16.0     | 176     | 113900   | 7221     | 3676    | 481     | 255.0     | 64.1      |\n",
+    "| HE 650 A    | 189.7  | 640.0  | 300.0  | 13.5     | 26.0     | 242     | 175200   | 11720    | 5474    | 782     | 269.0     | 69.7      |\n",
+    "| HE 650 B    | 224.8  | 650.0  | 300.0  | 16.0     | 31.0     | 286     | 210600   | 13980    | 6480    | 932     | 271.0     | 69.9      |\n",
+    "| HE 650 M    | 293.4  | 668.0  | 305.0  | 21.0     | 40.0     | 374     | 281700   | 18980    | 8433    | 1245    | 275.0     | 71.3      |\n",
+    "| HE 700 AA   | 149.9  | 670.0  | 300.0  | 13.0     | 17.0     | 191     | 142700   | 7673     | 4260    | 512     | 273.0     | 63.4      |\n",
+    "| HE 700 x166 | 166.2  | 678.0  | 300.0  | 12.5     | 21.0     | 212     | 168900   | 9471     | 4982    | 631     | 282.0     | 66.9      |\n",
+    "| HE 700 A    | 204.5  | 690.0  | 300.0  | 14.5     | 27.0     | 260     | 215300   | 12180    | 6241    | 812     | 288.0     | 68.4      |\n",
+    "| HE 700 B    | 240.5  | 700.0  | 300.0  | 17.0     | 32.0     | 306     | 256900   | 14440    | 7340    | 963     | 290.0     | 68.7      |\n",
+    "| HE 700 M    | 300.7  | 716.0  | 304.0  | 21.0     | 40.0     | 383     | 329300   | 18800    | 9198    | 1237    | 293.0     | 70.1      |\n",
+    "| HE 800 | AA | 171.5 | 770.0 | 300.0 | 14.0 | 18.0 | 218 | 208900 | 8134 | 5426 | 542 | 309.0 | 61.0 |\n",
+    "| HE 800 | A | 224.4 | 790.0 | 300.0 | 15.0 | 28.0 | 286 | 303400 | 12640 | 7682 | 843 | 326.0 | 66.5 |\n",
+    "| HE 800 | B | 262.3 | 800.0 | 300.0 | 17.5 | 33.0 | 334 | 359100 | 14900 | 8977 | 994 | 328.0 | 66.8 |\n",
+    "| HE 800 | M | 317.3 | 814.0 | 303.0 | 21.0 | 40.0 | 404 | 442600 | 18630 | 10870 | 1230 | 331.0 | 67.9 |\n",
+    "| HE 900 | AA | 198.0 | 870.0 | 300.0 | 15.0 | 20.0 | 252 | 301100 | 9041 | 6923 | 603 | 346.0 | 59.9 |\n",
+    "| HE 900 | A | 251.6 | 890.0 | 300.0 | 16.0 | 30.0 | 321 | 422100 | 13550 | 9485 | 903 | 363.0 | 65.0 |\n",
+    "| HE 900 | B | 291.5 | 900.0 | 300.0 | 18.5 | 35.0 | 371 | 494100 | 15820 | 10980 | 1054 | 365.0 | 65.3 |\n",
+    "| HE 900 | M | 332.5 | 910.0 | 302.0 | 21.0 | 40.0 | 424 | 570400 | 18450 | 12540 | 1222 | 367.0 | 66.0 |\n",
+    "| HE 1000 | A | 221.5 | 970.0 | 300.0 | 16.0 | 21.0 | 282 | 406500 | 9501 | 8380 | 633 | 380.0 | 58.0 |\n",
+    "| HE 1000 | A | 272.3 | 990.0 | 300.0 | 16.5 | 31.0 | 347 | 553800 | 14000 | 11190 | 934 | 400.0 | 63.5 |\n",
+    "| HE 1000 | B | 314.0 | 1000.0 | 300.0 | 19.0 | 36.0 | 400 | 644700 | 16280 | 12890 | 1085 | 401.0 | 63.8 |\n",
+    "| HE 1000 | M | 348.7 | 1008.0 | 302.0 | 21.0 | 40.0 | 444 | 722300 | 18460 | 14330 | 1222 | 403.0 | 64.5 |\n",
+    "\n",
+    "\n",
     "\n",
     "## CHS hollow sections (hot rolled)\n",
     "```{figure} Images/CHS.png\n",
