last 4 tables added to glue laminated timber basics

--- a/book/basics/timber/section_tables.ipynb
+++ b/book/basics/timber/section_tables.ipynb
@@ -21,15 +21,16 @@
     "### Width 33 mm\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
-    "| 69  | 2,20      | 26,1      | 0,90       | 12,5      | 0,21       |\n",
-    "| 95  | 3,10      | 49,6      | 2,35       | 17,2      | 0,28       |\n",
-    "| 120 | 3,90      | 79,2      | 4,75       | 21,7      | 0,36       |\n",
-    "| 133 | 4,30      | 97,2      | 6,46       | 24,1      | 0,40       |\n",
-    "| 145 | 4,70      | 115,6     | 8,38       | 26,3      | 0,43       |\n",
-    "| 170 | 5,60      | 158,9     | 13,51      | 30,8      | 0,51       |\n",
-    "| 195 | 6,40      | 209,1     | 20,39      | 35,3      | 0,58       |\n",
-    "| 220 | 7,20      | 266,2     | 29,28      | 39,9      | 0,66       |\n",
-    "| 245 | 14,20     | 580,2     | 71,07      | 137,3     | 3,98       |\n",
+    "| 69  | 2.20      | 26.1      | 0.90       | 12.5      | 0.21       |\n",
+    "| 95  | 3.10      | 49.6      | 2.35       | 17.2      | 0.28       |\n",
+    "| 120 | 3.90      | 79.2      | 4.75       | 21.7      | 0.36       |\n",
+    "| 133 | 4.30      | 97.2      | 6.46       | 24.1      | 0.40       |\n",
+    "| 145 | 4.70      | 115.6     | 8.38       | 26.3      | 0.43       |\n",
+    "| 170 | 5.60      | 158.9     | 13.51      | 30.8      | 0.51       |\n",
+    "| 195 | 6.40      | 209.1     | 20.39      | 35.3      | 0.58       |\n",
+    "| 220 | 7.20      | 266.2     | 29.28      | 39.9      | 0.66       |\n",
+    "| 245 | 14.20     | 580.2     | 71.07      | 137.3     | 3.98       |\n",
+    "\n",
     "\n",
     "### Width 45 mm\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
@@ -62,6 +63,26 @@
     "```{note}\n",
     "Remember that $I_y$, $I_z$, $W_y$ and $W_z$ are another notation for $I_{zz}$, $I_{yy}$, $W_{zz}$ and $W_{yy}$ respectively.\n",
     "```\n",
+    "\n",
+    "### Width 55 mm\n",
+    "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
+    "|-----|-----------|-----------|------------|\n",
+    "| 200 | 11.0      | 0.36      | 36.6       |\n",
+    "| 250 | 13.7      | 0.57      | 71.6       |\n",
+    "| 300 | 16.5      | 0.82      | 123.7      |\n",
+    "| 350 | 19.2      | 1.12      | 196.5      |\n",
+    "| 400 | 22.0      | 1.46      | 293.3      |\n",
+    "| 450 | 24.7      | 1.85      | 417.6      |\n",
+    "| 500 | 27.5      | 2.29      | 572.9      |\n",
+    "| 550 | 30.2      | 2.77      | 762.5      |\n",
+    "\n",
+    "### Width 85 mm\n",
+    "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
+    "|-----|-----------|-----------|------------|\n",
+    "\n",
+    "### Width 110 mm\n",
+    "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
+    "|-----|-----------|-----------|------------|\n",
     "\n",
     "### Width 135 mm\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
